@@ -20,6 +20,14 @@ trace_format = option('Antilles', 'CRL', 'ISNet', 'IPOC', 'mseed', default='msee
 #   mis_oriented_channels = Z,1,2
 mis_oriented_channels = string_list(default=None)
 
+# Option to specify non standard instrument codes (e.g., "L" for accelerometer)
+instrument_code_acceleration = string(default=None)
+instrument_code_velocity = string(default=None)
+
+# For more complex station/channel/network/location (SCNL) naming scenarios,
+# you can provide a file, in json format, with traceid (SCNL) mapping
+traceids = string(default=None)
+
 # List of stations to ignore
 ignore_stations = string_list(default=None)
 
@@ -38,9 +46,6 @@ dataless = string(default=None)
 
 # Alternatively, a directory with PAZ files can be specified:
 paz = string(default=None)
-
-# Traceid file, in json format, for station SCNL correction (optional):
-traceids = string(default=None)
 
 # Database file for storing output parameters (optional):
 database_file = string(default=None)
