@@ -14,6 +14,8 @@ v1.0 - 2020-12-xx
 		  supported and generate an error
 	- Reorganized config file and improved inline documentation within the file
 		- removed unused option: fc_0
+	- Option to specify non standard instrument codes (e.g., "L" for
+	  acceleration)
 	- Plotting improvements:
 		- Show S/N ratio on trace plots
 		- Show spectral S/N ratio on spectrum plots
